--- a/Challenge-3/blog-app/composer.json
+++ b/Challenge-3/blog-app/composer.json
@@ -12,6 +12,8 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-azure-blob-storage": "^3.28",
+        "microsoft/azure-storage-blob": "^1.5",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
